<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/workoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/cardio_knock_out"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/tvTime"
        app:layout_constraintEnd_toStartOf="@id/iconFav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="8dp"
        android:contentDescription="@string/favourite"
        android:focusable="true"
        android:src="@drawable/ic_fav"
        app:layout_constraintBottom_toBottomOf="@id/workoutName"
        app:layout_constraintEnd_toStartOf="@id/shareIcon"
        app:layout_constraintStart_toEndOf="@id/workoutName"
        app:layout_constraintTop_toTopOf="@id/workoutName" />


    <ImageView
        android:id="@+id/shareIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/share"
        android:focusable="true"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/workoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconFav"
        app:layout_constraintTop_toTopOf="@id/workoutName" />


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="4dp"
        android:text="@string/_5_min"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/ic_clock"
        app:layout_constraintEnd_toStartOf="@id/tvViews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workoutName" />

    <TextView
        android:id="@+id/tvViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="4dp"
        android:text="@string/_25_5k"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@id/tvTime"
        app:layout_constraintBottom_toTopOf="@id/videoViewParent"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toTopOf="@id/tvTime" />

    <androidx.cardview.widget.CardView
        android:id="@+id/videoViewParent"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/tagsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvViews">

        <ImageView
            android:id="@+id/playIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/playicon"
            android:src="@drawable/ic_icplay" />


        <ImageView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/videoview" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tagsRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/workoutDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoViewParent"
        tools:listitem="@layout/item_tags" />

    <TextView
        android:id="@+id/workoutDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/in_this_course_i_will_take_you_through_the_process_of_becoming_a_fitness_expert_step_by_step_you_will_learn_everything_you_need_to_know_about_the_fundamentals_of_good_training_programs_and_how_to_design_your_very_own_for_you_or_your_clients"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/btnStartWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagsRecycler" />

    <ImageView
        android:id="@+id/btnStartWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workoutDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>